--- a/index.html
+++ b/index.html
@@ -1,70 +1,77 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Malla Curricular Mecatrónica EIA</title>
+  <meta charset="UTF-8" />
+  <title>Malla Mecatrónica EIA</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f7f9fb;
+      background: #f4f7fb;
       padding: 20px;
-      color: #333;
+      margin: 0;
     }
     h1 {
       text-align: center;
-      margin-bottom: 30px;
+      color: #333;
     }
     .grid {
       display: flex;
+      flex-wrap: nowrap;
       overflow-x: auto;
       gap: 20px;
+      margin-top: 30px;
     }
     .semestre {
-      min-width: 230px;
+      min-width: 240px;
       background: #fff;
       border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       padding: 15px;
-      flex-shrink: 0;
+      box-shadow: 0 0 8px rgba(0,0,0,0.1);
     }
     .semestre h2 {
-      font-size: 1.1em;
-      color: #2c3e50;
-      margin-bottom: 10px;
       text-align: center;
+      font-size: 1rem;
+      color: #555;
+      margin-bottom: 10px;
     }
     .materia {
-      position: relative;
-      padding: 8px;
+      background: #e2ecf7;
       margin: 6px 0;
-      background: #e8f0fe;
+      padding: 10px;
       border-radius: 6px;
       cursor: pointer;
-      transition: background 0.2s;
-    }
-    .materia:hover {
-      background: #d0e3ff;
+      transition: 0.2s;
+      position: relative;
     }
     .materia.aprobada {
-      background: #c3f3c0;
+      background: #c8f7c5;
       text-decoration: line-through;
+      color: #444;
     }
     .materia.bloqueada {
       background: #f0f0f0;
-      color: #999;
+      color: #aaa;
       cursor: not-allowed;
+    }
+    .materia:hover {
+      background: #d2e2ff;
+    }
+    .materia.bloqueada:hover {
+      background: #f0f0f0;
     }
     .tooltip {
       display: none;
       position: absolute;
+      top: 50%;
       left: 100%;
-      top: 0;
-      margin-left: 10px;
-      padding: 5px 8px;
-      background: rgba(0, 0, 0, 0.8);
+      margin-left: 8px;
+      transform: translateY(-50%);
+      background: rgba(0,0,0,0.8);
       color: #fff;
+      padding: 5px 10px;
       font-size: 0.75em;
       border-radius: 4px;
+      max-width: 180px;
       z-index: 10;
     }
     .materia.bloqueada:hover .tooltip {
@@ -73,12 +80,85 @@
   </style>
 </head>
 <body>
-  <h1>Malla Curricular Interactiva – Ingeniería Mecatrónica (EIA)</h1>
+  <h1>Malla Curricular - Ingeniería Mecatrónica (EIA)</h1>
   <div class="grid" id="malla"></div>
 
   <script>
-    const courses = [/* Aquí seguirán los cursos - sigue abajo */];
+    const courses = [
+      // 🔽 Aquí van las materias (semestre, nombre, prerrequisitos)
+      { name: "Universo Mecatrónico", semester: "Semestre 1", prerequisites: [] },
+      { name: "Sistemas Neumáticos e H. Biomorfismos", semester: "Semestre 1", prerequisites: [] },
+      { name: "Programación", semester: "Semestre 1", prerequisites: [] },
+      { name: "Optativa en Comunicación", semester: "Semestre 1", prerequisites: [] },
+      { name: "Geometría", semester: "Semestre 1", prerequisites: [] },
+      { name: "Cálculo Diferencial", semester: "Semestre 1", prerequisites: [] },
+      { name: "Proyecto I", semester: "Semestre 2", prerequisites: ["Universo Mecatrónico"] },
+      { name: "Dibujo Mecánico", semester: "Semestre 2", prerequisites: ["Geometría"] },
+      { name: "Programación y Software", semester: "Semestre 2", prerequisites: ["Programación"] },
+      { name: "Bases de Datos", semester: "Semestre 2", prerequisites: ["Programación"] },
+      { name: "Física Mecánica", semester: "Semestre 2", prerequisites: ["Cálculo Diferencial", "Geometría"] },
+      { name: "Álgebra Lineal", semester: "Semestre 2", prerequisites: ["Cálculo Diferencial"] },
+      { name: "Cálculo Integral", semester: "Semestre 2", prerequisites: ["Cálculo Diferencial"] },
+      { name: "Ciencia de los Materiales", semester: "Semestre 3", prerequisites: ["Sistemas Neumáticos e H. Biomorfismos"] },
+      { name: "Termodinámica y Fluidos", semester: "Semestre 3", prerequisites: ["Física Mecánica"] },
+      { name: "Optativa Sociohumanística", semester: "Semestre 3", prerequisites: [] },
+      { name: "Estática", semester: "Semestre 3", prerequisites: ["Física Mecánica"] },
+      { name: "Física de Campos", semester: "Semestre 3", prerequisites: ["Física Mecánica", "Cálculo Integral"] },
+      { name: "Cálculo en Varias Variables", semester: "Semestre 3", prerequisites: ["Cálculo Integral"] },
+      // Puedes seguir agregando más materias así...
+    ];
+
+    const estado = JSON.parse(localStorage.getItem("estadoMaterias")) || {};
+
+    function renderMalla() {
+      const container = document.getElementById("malla");
+      container.innerHTML = "";
+
+      const semestres = [...new Set(courses.map(c => c.semester))];
+      semestres.forEach(sem => {
+        const columna = document.createElement("div");
+        columna.className = "semestre";
+        const titulo = document.createElement("h2");
+        titulo.textContent = sem;
+        columna.appendChild(titulo);
+
+        courses.filter(c => c.semester === sem).forEach(materia => {
+          const div = document.createElement("div");
+          div.className = "materia";
+          div.textContent = materia.name;
+
+          const aprobadas = Object.keys(estado).filter(k => estado[k]);
+
+          const faltan = materia.prerequisites.filter(p => !estado[p]);
+          if (estado[materia.name]) {
+            div.classList.add("aprobada");
+          } else if (faltan.length > 0) {
+            div.classList.add("bloqueada");
+            const tooltip = document.createElement("div");
+            tooltip.className = "tooltip";
+            tooltip.textContent = "Faltan: " + faltan.join(", ");
+            div.appendChild(tooltip);
+          }
+
+          div.addEventListener("click", () => {
+            if (div.classList.contains("bloqueada")) return;
+            estado[materia.name] = !estado[materia.name];
+            localStorage.setItem("estadoMaterias", JSON.stringify(estado));
+            renderMalla();
+          });
+
+          columna.appendChild(div);
+        });
+
+        container.appendChild(columna);
+      });
+    }
+
+    renderMalla();
   </script>
+</body>
+</html>
+
 
 
 
