--- a/index.html
+++ b/index.html
@@ -1,161 +1,241 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <title>Malla Mecatrónica EIA</title>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f4f7fb;
-      padding: 20px;
-      margin: 0;
-    }
-    h1 {
-      text-align: center;
-      color: #333;
-    }
-    .grid {
-      display: flex;
-      flex-wrap: nowrap;
-      overflow-x: auto;
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .semestre {
-      min-width: 240px;
-      background: #fff;
-      border-radius: 8px;
-      padding: 15px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-    .semestre h2 {
-      text-align: center;
-      font-size: 1rem;
-      color: #555;
-      margin-bottom: 10px;
-    }
-    .materia {
-      background: #e2ecf7;
-      margin: 6px 0;
-      padding: 10px;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: 0.2s;
-      position: relative;
-    }
-    .materia.aprobada {
-      background: #c8f7c5;
-      text-decoration: line-through;
-      color: #444;
-    }
-    .materia.bloqueada {
-      background: #f0f0f0;
-      color: #aaa;
-      cursor: not-allowed;
-    }
-    .materia:hover {
-      background: #d2e2ff;
-    }
-    .materia.bloqueada:hover {
-      background: #f0f0f0;
-    }
-    .tooltip {
-      display: none;
-      position: absolute;
-      top: 50%;
-      left: 100%;
-      margin-left: 8px;
-      transform: translateY(-50%);
-      background: rgba(0,0,0,0.8);
-      color: #fff;
-      padding: 5px 10px;
-      font-size: 0.75em;
-      border-radius: 4px;
-      max-width: 180px;
-      z-index: 10;
-    }
-    .materia.bloqueada:hover .tooltip {
-      display: block;
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Malla Curricular Mecatrónica - EIA</title>
+<style>
+  body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background: #f0f4f8;
+    margin: 0;
+    padding: 20px;
+    color: #333;
+  }
+  h1 {
+    text-align: center;
+    color: #2c3e50;
+    margin-bottom: 30px;
+  }
+  .grid {
+    display: flex;
+    gap: 20px;
+    overflow-x: auto;
+    padding-bottom: 10px;
+  }
+  .semestre {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 15px;
+    min-width: 280px;
+    flex-shrink: 0;
+  }
+  .semestre h2 {
+    font-size: 1.3em;
+    border-bottom: 3px solid #a3c9f1;
+    padding-bottom: 7px;
+    margin-top: 0;
+    color: #3a5068;
+  }
+  .materia {
+    background: #d9e8fb;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 8px;
+    cursor: pointer;
+    position: relative;
+    transition: background-color 0.3s ease;
+    user-select: none;
+  }
+  .materia.aprobada {
+    background: #b8e3b0;
+    color: #2c662d;
+    text-decoration: line-through;
+  }
+  .materia.bloqueada {
+    background: #eee;
+    color: #aaa;
+    cursor: not-allowed;
+  }
+  .tooltip {
+    display: none;
+    position: absolute;
+    left: 105%;
+    top: 50%;
+    transform: translateY(-50%);
+    background: #333;
+    color: #fff;
+    padding: 6px 10px;
+    border-radius: 5px;
+    white-space: nowrap;
+    z-index: 10;
+    font-size: 0.85em;
+  }
+  .materia.bloqueada:hover .tooltip {
+    display: block;
+  }
+</style>
 </head>
 <body>
-  <h1>Malla Curricular - Ingeniería Mecatrónica (EIA)</h1>
-  <div class="grid" id="malla"></div>
+<h1>Malla Curricular Ingeniería Mecatrónica - EIA</h1>
+<div id="malla" class="grid"></div>
 
-  <script>
-    const courses = [
-      // 🔽 Aquí van las materias (semestre, nombre, prerrequisitos)
-      { name: "Universo Mecatrónico", semester: "Semestre 1", prerequisites: [] },
-      { name: "Sistemas Neumáticos e H. Biomorfismos", semester: "Semestre 1", prerequisites: [] },
-      { name: "Programación", semester: "Semestre 1", prerequisites: [] },
-      { name: "Optativa en Comunicación", semester: "Semestre 1", prerequisites: [] },
-      { name: "Geometría", semester: "Semestre 1", prerequisites: [] },
-      { name: "Cálculo Diferencial", semester: "Semestre 1", prerequisites: [] },
-      { name: "Proyecto I", semester: "Semestre 2", prerequisites: ["Universo Mecatrónico"] },
-      { name: "Dibujo Mecánico", semester: "Semestre 2", prerequisites: ["Geometría"] },
-      { name: "Programación y Software", semester: "Semestre 2", prerequisites: ["Programación"] },
-      { name: "Bases de Datos", semester: "Semestre 2", prerequisites: ["Programación"] },
-      { name: "Física Mecánica", semester: "Semestre 2", prerequisites: ["Cálculo Diferencial", "Geometría"] },
-      { name: "Álgebra Lineal", semester: "Semestre 2", prerequisites: ["Cálculo Diferencial"] },
-      { name: "Cálculo Integral", semester: "Semestre 2", prerequisites: ["Cálculo Diferencial"] },
-      { name: "Ciencia de los Materiales", semester: "Semestre 3", prerequisites: ["Sistemas Neumáticos e H. Biomorfismos"] },
-      { name: "Termodinámica y Fluidos", semester: "Semestre 3", prerequisites: ["Física Mecánica"] },
-      { name: "Optativa Sociohumanística", semester: "Semestre 3", prerequisites: [] },
-      { name: "Estática", semester: "Semestre 3", prerequisites: ["Física Mecánica"] },
-      { name: "Física de Campos", semester: "Semestre 3", prerequisites: ["Física Mecánica", "Cálculo Integral"] },
-      { name: "Cálculo en Varias Variables", semester: "Semestre 3", prerequisites: ["Cálculo Integral"] },
-      // Puedes seguir agregando más materias así...
-    ];
+<script>
+  // Datos de materias con prerrequisitos (usar IDs para relacionar)
+  const materias = [
+    // Semestre 1
+    { id: 'U_Mecatronico', nombre: 'Universo Mecatrónico', semestre: 1, prereq: [] },
+    { id: 'S_Neumaticos', nombre: 'Sistemas Neumáticos e H. Biomorfismos', semestre: 1, prereq: [] },
+    { id: 'Programacion', nombre: 'Programación', semestre: 1, prereq: [] },
+    { id: 'Optativa_Comunicacion', nombre: 'Optativa en Comunicación', semestre: 1, prereq: [] },
+    { id: 'Geometria', nombre: 'Geometría', semestre: 1, prereq: [] },
+    { id: 'Calculo_Diferencial', nombre: 'Cálculo Diferencial', semestre: 1, prereq: [] },
 
-    const estado = JSON.parse(localStorage.getItem("estadoMaterias")) || {};
+    // Semestre 2
+    { id: 'Proyecto_I', nombre: 'Proyecto I', semestre: 2, prereq: ['U_Mecatronico'] },
+    { id: 'Dibujo_Mecanico', nombre: 'Dibujo Mecánico', semestre: 2, prereq: ['Geometria'] },
+    { id: 'Programacion_Software', nombre: 'Programación y Software para Mecatrónicos', semestre: 2, prereq: ['Programacion'] },
+    { id: 'Bases_Datos', nombre: 'Bases de Datos', semestre: 2, prereq: ['Programacion'] },
+    { id: 'Fisica_Mecanica', nombre: 'Física Mecánica', semestre: 2, prereq: ['Calculo_Diferencial', 'Geometria'] },
+    { id: 'Algebra_Lineal', nombre: 'Álgebra Lineal', semestre: 2, prereq: ['Calculo_Diferencial'] },
+    { id: 'Calculo_Integral', nombre: 'Cálculo Integral', semestre: 2, prereq: ['Calculo_Diferencial'] },
 
-    function renderMalla() {
-      const container = document.getElementById("malla");
-      container.innerHTML = "";
+    // Semestre 3
+    { id: 'Ciencia_Materiales', nombre: 'Ciencia de los Materiales', semestre: 3, prereq: ['S_Neumaticos'] },
+    { id: 'Termodinamica_Mecanica_Fluidos', nombre: 'Termodinámica y Mecánica de Fluidos', semestre: 3, prereq: ['Fisica_Mecanica'] },
+    { id: 'Optativa_Sociohumanistica', nombre: 'Optativa Sociohumanística', semestre: 3, prereq: [] },
+    { id: 'Estatica', nombre: 'Estática', semestre: 3, prereq: ['Fisica_Mecanica'] },
+    { id: 'Fisica_Campos', nombre: 'Física de Campos', semestre: 3, prereq: ['Fisica_Mecanica', 'Calculo_Integral'] },
+    { id: 'Calculo_Varias_Variables', nombre: 'Cálculo en Varias Variables', semestre: 3, prereq: ['Calculo_Integral'] },
 
-      const semestres = [...new Set(courses.map(c => c.semester))];
-      semestres.forEach(sem => {
-        const columna = document.createElement("div");
-        columna.className = "semestre";
-        const titulo = document.createElement("h2");
-        titulo.textContent = sem;
-        columna.appendChild(titulo);
+    // Semestre 4
+    { id: 'Procesos_Transformacion', nombre: 'Procesos de Transformación', semestre: 4, prereq: ['Ciencia_Materiales', 'Mecanica_Materiales'] },
+    { id: 'Oleoneumatica', nombre: 'Oleoneumática', semestre: 4, prereq: ['Termodinamica_Mecanica_Fluidos'] },
+    { id: 'Mecanica_Materiales', nombre: 'Mecánica de Materiales', semestre: 4, prereq: ['Ciencia_Materiales', 'Estatica'] },
+    { id: 'Dinamica', nombre: 'Dinámica', semestre: 4, prereq: ['Estatica'] },
+    { id: 'Ecuaciones_Diferenciales', nombre: 'Ecuaciones Diferenciales', semestre: 4, prereq: ['Calculo_Varias_Variables'] },
+    { id: 'Electronica', nombre: 'Electrónica', semestre: 4, prereq: ['Calculo_Integral'] },
 
-        courses.filter(c => c.semester === sem).forEach(materia => {
-          const div = document.createElement("div");
-          div.className = "materia";
-          div.textContent = materia.name;
+    // Semestre 5
+    { id: 'Diseno_Manufactura_Asistida', nombre: 'Diseño y Manufactura Asistidos', semestre: 5, prereq: ['Dibujo_Mecanico'] },
+    { id: 'Sistemas_Mecanicos', nombre: 'Sistemas Mecánicos', semestre: 5, prereq: ['Mecanica_Materiales'] },
+    { id: 'Modelado_Simulacion', nombre: 'Modelado y Simulación de Sistemas Mecatrónicos', semestre: 5, prereq: ['Ecuaciones_Diferenciales', 'Programacion_Software'] },
+    { id: 'Electronica_Potencia', nombre: 'Electrónica de Potencia y Máquinas', semestre: 5, prereq: ['Electronica'] },
+    { id: 'Ingenieria_Economica', nombre: 'Ingeniería Económica', semestre: 5, prereq: [] },
+    { id: 'Senales_Sistemas', nombre: 'Señales y Sistemas', semestre: 5, prereq: ['Algebra_Lineal', 'Ecuaciones_Diferenciales'] },
 
-          const aprobadas = Object.keys(estado).filter(k => estado[k]);
+    // Semestre 6
+    { id: 'Sistemas_Embebidos', nombre: 'Sistemas Embebidos', semestre: 6, prereq: ['Senales_Sistemas'] },
+    { id: 'Control_Procesos_Tiempo', nombre: 'Control de Procesos en Tiempo Continuo', semestre: 6, prereq: ['Modelado_Simulacion'] },
+    { id: 'Instrumentacion_Automatizacion', nombre: 'Instrumentación y Automatización de Procesos', semestre: 6, prereq: ['Control_Procesos_Tiempo'] },
+    { id: 'Reto_Empresarismo', nombre: 'Reto de Empresarismo', semestre: 6, prereq: [] },
+    { id: 'Probabilidad_Estadistica', nombre: 'Probabilidad y Estadística', semestre: 6, prereq: ['Calculo_Varias_Variables'] },
+    { id: 'Innovacion_Social', nombre: 'Innovación Social', semestre: 6, prereq: [], creditosMin: 0.5 }, // 50% créditos
+    { id: 'Formulacion_Proyectos', nombre: 'Formulación y Evaluación de Proyectos', semestre: 6, prereq: ['Ingenieria_Economica'] },
 
-          const faltan = materia.prerequisites.filter(p => !estado[p]);
-          if (estado[materia.name]) {
-            div.classList.add("aprobada");
-          } else if (faltan.length > 0) {
-            div.classList.add("bloqueada");
-            const tooltip = document.createElement("div");
-            tooltip.className = "tooltip";
-            tooltip.textContent = "Faltan: " + faltan.join(", ");
-            div.appendChild(tooltip);
+    // Semestre 7
+    { id: 'Robotica', nombre: 'Robótica', semestre: 7, prereq: ['Instrumentacion_Automatizacion', 'Control_Procesos_Tiempo'] },
+    { id: 'Control_Digital_Sistemas', nombre: 'Control Digital de Sistemas Dinámicos', semestre: 7, prereq: ['Control_Procesos_Tiempo'] },
+    { id: 'Redes_Industriales', nombre: 'Redes Industriales', semestre: 7, prereq: ['Sistemas_Embebidos'] },
+    { id: 'Optativa_Gestion_Liderazgo', nombre: 'Optativa en Gestión y Liderazgo', semestre: 7, prereq: [], creditosMin: 0.4 },
+    { id: 'Electiva_I', nombre: 'Electiva I', semestre: 7, prereq: [] },
+    { id: 'Electiva_II', nombre: 'Electiva II', semestre: 7, prereq: [] },
+
+    // Semestre 8
+    { id: 'IA_Sistemas_Mecatronicos', nombre: 'IA en Sistemas Mecatrónicos', semestre: 8, prereq: ['Control_Digital_Sistemas'] },
+    { id: 'Diseno_Mecatronico', nombre: 'Diseño Mecatrónico', semestre: 8, prereq: ['Robotica'] },
+    { id: 'Innovacion_Empresarial', nombre: 'Innovación Empresarial', semestre: 8, prereq: ['Reto_Empresarismo', 'Formulacion_Proyectos'] },
+    { id: 'Electiva_III', nombre: 'Electiva III', semestre: 8, prereq: [] },
+    { id: 'Electiva_IV', nombre: 'Electiva IV', semestre: 8, prereq: [] },
+    { id: 'Competencias_Ciudadanas', nombre: 'Competencias Ciudadanas', semestre: 8, prereq: [], creditosMin: 0.5 },
+
+    // Semestre 9
+    { id: 'Electiva_V', nombre: 'Electiva V', semestre: 9, prereq: [], creditosMin: 0.65, esProyectoFinal:true }
+  ];
+
+  // Obtener aprobado de localStorage o default vacío
+  const aprobadoStorageKey = 'mallaEIA_aprobado';
+  let aprobado = JSON.parse(localStorage.getItem(aprobadoStorageKey)) || {};
+
+  // Para calcular créditos aprobados (simplemente contar materias aprobadas)
+  function calcularPorcentajeCreditos() {
+    const total = materias.length;
+    const aprobadas = Object.values(aprobado).filter(v => v).length;
+    return aprobadas / total;
+  }
+
+  // Comprueba si todos los prereq están aprobados para la materia dada
+  function puedeTomar(materia) {
+    if (materia.creditosMin && calcularPorcentajeCreditos() < materia.creditosMin) return false;
+    return materia.prereq.every(id => aprobado[id]);
+  }
+
+  // Renderizar materias por semestre
+  function render() {
+    const container = document.getElementById('malla');
+    container.innerHTML = '';
+
+    // Agrupar por semestre
+    const semestres = {};
+    materias.forEach(m => {
+      if (!semestres[m.semestre]) semestres[m.semestre] = [];
+      semestres[m.semestre].push(m);
+    });
+
+    for (const [sem, listaMaterias] of Object.entries(semestres)) {
+      const divSem = document.createElement('div');
+      divSem.className = 'semestre';
+
+      const h2 = document.createElement('h2');
+      h2.textContent = `Semestre ${sem}`;
+      divSem.appendChild(h2);
+
+      listaMaterias.forEach(materia => {
+        const divMat = document.createElement('div');
+        divMat.className = 'materia';
+        divMat.textContent = materia.nombre;
+
+        const bloqueada = !puedeTomar(materia) && !aprobado[materia.id];
+
+        if (aprobado[materia.id]) {
+          divMat.classList.add('aprobada');
+        } else if (bloqueada) {
+          divMat.classList.add('bloqueada');
+          // Tooltip
+          const tooltip = document.createElement('span');
+          tooltip.className = 'tooltip';
+
+          // Lista qué prereqs faltan (solo si no es por créditos min)
+          if (materia.creditosMin && calcularPorcentajeCreditos() < materia.creditosMin) {
+            tooltip.textContent = `Requiere al menos ${materia.creditosMin*100}% créditos aprobados`;
+          } else {
+            const faltantes = materia.prereq.filter(id => !aprobado[id]);
+            if (faltantes.length) {
+              tooltip.textContent = `Faltan: ${faltantes.map(id => materias.find(m => m.id === id).nombre).join(', ')}`;
+            }
           }
+          divMat.appendChild(tooltip);
+        }
 
-          div.addEventListener("click", () => {
-            if (div.classList.contains("bloqueada")) return;
-            estado[materia.name] = !estado[materia.name];
-            localStorage.setItem("estadoMaterias", JSON.stringify(estado));
-            renderMalla();
+        // Click sólo si no bloqueada
+        if (!bloqueada) {
+          divMat.addEventListener('click', () => {
+            aprobado[materia.id] = !aprobado[materia.id];
+            localStorage.setItem(aprobadoStorageKey, JSON.stringify(aprobado));
+            render();
           });
+        }
 
-          columna.appendChild(div);
-        });
-
-        container.appendChild(columna);
+        divSem.appendChild(divMat);
       });
-    }
 
-    renderMalla();
-  </script>
+      container.appendChild(divSem);
+    }
+  }
+
+  render();
+</script>
 </body>
 </html>
 
